<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_currency"
        style="@style/Settings_text"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usd"
            style="@style/Settings_Radio_Button"
            android:background="@drawable/left_selector"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pln"
            style="@style/Settings_Radio_Button"
            android:background="@drawable/center_selector"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eur"
            style="@style/Settings_Radio_Button"
            android:background="@drawable/right_selector"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tvMonthlyBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_monthly_budget"
        style="@style/Settings_text"/>

    <EditText
        android:hint="@string/your_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btSave"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_gravity="center"
            android:textSize="23sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>